src/css/header.css
@font-face {
    font-family: Motiva Sans;
    src: url(../resource/MotivaSansThin.ttf);
}

@keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
}

* {
    color: white;
}

.header_container {
    background-color: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 3.5%;
}

.header {
    width: 100%;
}

#avatar_container {
    float: left;
    display: grid;
    position: relative;
    width: 22%;
    height: 100%;
}

#avatar_image {
    max-width: 100%;
}

#info {
    float: left;
    width: 45%;
    height: 100%;
    overflow: visible;
    margin-left: 3%;
    margin-right: 3%;
}

#name_container {
    position: relative;
    top: 6%;
    width: 100%;
}

#name {
    top: 10%;
    display: inline;
    font-size: 28px;
    font-family: Motiva Sans, sans-serif;
}

#country_container {
    display: flex;
    align-items: center;
    width: fit-content;
    padding-top: 1%;
}

#country_pic {
    padding: 1%;
}

#country {
    margin: 0 0 0 5%;
    padding: 0;
}

#description {
    margin-top: 5%;
}

#age_container {
    display: flex;
    width: fit-content;
    align-items: center;
    margin-top: 5%;
}

#age {
    font-size: 26px;
    font-family: Motiva Sans, sans-serif;
    margin: 0;
}

#age_num {
    padding: 6.5%;
    border-radius: 50%;
    border-color: rgb(192, 41, 66);
    border-style: solid;
    font-size: 18px;
    font-family: Motiva Sans, sans-serif;
    margin: 0 0 0 10%;
}

#mg_container {
    display: block;
    margin-top: 2%;
}

.header_button {
    font-size: 95%;
    background-color: rgba(0, 0, 0, 0.2);
    border: none;
    padding: 4%;
    border-radius: 6px;
    margin-right: 2%;
}

.header_button:hover {
    background-color: rgba(255, 255, 255, 0.2);
}

#message_button:hover {
    background-color: rgba(255, 255, 255, 0.2);
}

#message_button:hover + .container {
    display: block;
    position: absolute;
}

#badge_container {
    background-color: rgba(0, 0, 0, 0.2);
    padding: 4% 4% 6%;
    margin-top: 5%;
    border-radius: 6px;
}

#badge_img {
    margin-right: 5%;
}

#badge_text_container {
    display: flex;
    flex-flow: column;
    margin-left: 30%;
    width: 50%;
    height: 100%;
}

.badge_text {
    margin: 0;
    padding-top: 5%;
}

#levelbadge {
    float: left;
    width: 30%;
}

#m_description {
    margin-left: 2%;
}

#m_name_country {
    margin-left: 2%;
}

#m_avatar_container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    width: 40%;
    padding: 4%;
}

#m_badge_container {
    background-color: rgba(0, 0, 0, 0.2);
    padding: 4%;
    margin-top: 5%;
    border-radius: 6px;
    height: 11vw;
}

#m_levelbadge {
    width: 52%;
}

#avatar_levelbadge_container {
    display: flex;
    margin-top: 2%;
    margin-bottom: 2%;
    height: fit-content;
}

#m_header {
    margin-left: 2%;
    margin-right: 2%;
    padding-top: 5%;
}

